[package]
name = "bear"
version = "0.2.2"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2018"

description = """
A dead-simple test helper for rust.
"""

documentation = "https://docs.rs/crate/bear/"
readme = "README.md"
homepage = "https://github.com/simnalamburt/bear"
repository = "https://github.com/simnalamburt/bear"
license = "BSD-2-Clause"
keywords = ["test"]
